Sun Feb 25 17:58:57 2001  George Lebl <jirka@5z.com>

	bored by this patch: Mike Fleming  <mfleming@eazel.com>

	Fixes #6973

	* components/help/converters/gnome-db2html2/Makefile.am: define
	  GNOMELOCALEDIR

	* components/help/converters/gnome-db2html2/gdb3html.c (main):
	  do the gettext dance as jfleck so rightly pointed out

2001-02-25  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

	* components/services/install/command-line/eazel-alt-install-corba.c: 
	(set_parameters_from_command_line): Fixed bug 7000.

	* components/services/summary/nautilus-summary-view-private.h,
	components/services/summary/nautilus-summary-view.c: changed
	things to properly internationalize strings in #defines to fix bug
	6997 (Defined "More Info" message does not end up in translation).

2001-02-25  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Seth Nickell  <snickell@stanford.edu>

	Fixed bug 6822 (Need to be able to support services that run a
	program instead of launching a URI).

	* components/services/summary/nautilus-summary-view.c:
	(summary_view_button_callback, summary_view_update_pane,
	program_uri_for_nonexistent_program, generate_service_entry_row):
	Add support for special "command:" URIs in the summary view. If
	the program specified does not exist, leave the service out of the
	listing.

2001-02-24  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

        Fix bug 5462 ("View as %s" and "%s Viewer" composed messages hard
	to translate) by making Nautilus view oafinfo files provide the
	full messages.

	* libnautilus-extensions/nautilus-view-identifier.h,
	libnautilus-extensions/nautilus-view-identifier.c:
	nautilus_view_identifier_new, nautilus_view_identifier_copy,
	nautilus_view_identifier_new_from_oaf_server_info,
	nautilus_view_identifier_free): Add `view_as_label' and
	`viewer_label' fields; determine them from either special new oaf
	attributes or compose them from `view_as_name'.
